<resources>
    <string name="app_name">Local Surveys</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="home">My Surveys</string>
    <string name="start_survey">Start Survey</string>
    <string name="find_survey">Find Survey</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="info">Info</string>

    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign In</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">Login</string>
    <string name="prompt_password">Please enter your password</string>
    <string name="btn_link_to_register">Not a member?</string>
    <string name="btn_link_to_login">I already have an account</string>
    <string name="title_activity_reset_password">Forgot password?</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back">Back</string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="email_id">Email ID</string>
    <string name="heading_register">Register</string>
    <string name="hint_password_repeat">Repeat Password</string>
    <string name="email_empty">Please enter a valid e-mail address</string>
    <string name="password_empty">Please enter a password</string>
    <string name="passwords_not_matching">Passwords are not equal</string>
    <string name="reset_explanation">No problem! Just enter your e-mail so we can send you instructions to reset your password.</string>
    <string name="btn_logout">Logout</string>
    <string name="test_user">test@test.de</string>
    <string name="test_user_password">test123</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="private_mode">Private Mode</string>
    <string name="unlock_pro_version">Unlock PRO version</string>
    <string name="information">Information</string>
    <string name="createSurvey">Create Survey</string>
    <string name="addQuestion">Add a Question</string>
    <string name="done">Yay!</string>
    <string name="version">0.1.0</string>
    <string name="creators">
        Lisa Manger\nAriane Kraus\nPhillip Bruck\nMihael Bandalo\nTim irgendwie\nAlexander Miller
    </string>
    <string name="title_survey_list">Surveys</string>
    <string name="title_survey_detail">Survey Detail</string>

    <string name="refresh">Refresh</string>
    <string name="yourSurveys">Your Surveys</string>
    <string name="currentSurveys">Current Surveys</string>

    Strings for Home Screen
    <string name="home_hello">Hello</string>
    <string name="home_text">Why don\'t you check out one of those surveys?\nCan\'t see one? Start your own\nor check out the menu on the left for more options</string>
    <string name="home_start_survey">Want to start your own survey?\nJust click the button</string>

</resources>
