<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/menu_core"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_start"
            android:icon="@drawable/ic_play_arrow_black_24dp"
            android:title="@string/start_survey" />
        <item
            android:id="@+id/nav_find"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/find_survey" />
    </group>


    <group
        android:id="@+id/menu_browse"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_access_time_black_24dp"
            android:title="@string/history" />
        <item
            android:id="@+id/nav_my_surveys"
            android:icon="@drawable/ic_insert_chart_black_24dp"
            android:title="@string/my_surveys" />
    </group>

    <group
        android:id="@+id/menu_info"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/info" />
    </group>

    <group
        android:id="@+id/menu_logout"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_vpn_key_black_24dp"
            android:title="@string/btn_logout" />
    </group>

</menu>
